<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearmpay"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_pay"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/orange"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/orange"
                android:contentDescription="@string/orang" />

            <ImageView
                android:id="@+id/momo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/mtn"
                android:contentDescription="@string/starts" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>