<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PaymentMode.OptionPayActivity"
    tools:showIn="@layout/activity_option_pay">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:text="@string/txtImg"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/re"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                android:text="@string/choose_pic"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/show_image"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_image_one"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:text="@string/addi" />

    </LinearLayout>

    <Button
        android:id="@+id/urlOpen"
        android:background="@drawable/bgk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/con_maintenant"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:textColor="#fff"
        android:textSize="12sp"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</RelativeLayout>