<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/linearmpay"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/pay"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/orange"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/orange"
                android:contentDescription="@string/orang" />

            <ImageView
                android:id="@+id/momo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/mtn"
                android:contentDescription="@string/starts" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:id="@+id/go_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="10dp"
            android:background="@drawable/bgfunc"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/ic_mail"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/notpay"
                android:textSize="17sp"
                android:layout_marginStart="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_fle"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/start" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/go_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgfunc"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:src="@drawable/ic_transac"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/start" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report"
                android:textSize="17sp"
                android:layout_marginStart="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_fle"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/go_analysis"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgfunc"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="3dp"
                android:src="@drawable/ic_analys"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/start" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analys"
                android:textSize="17sp"
                android:layout_marginStart="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_fle"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/start" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>




</RelativeLayout>